<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hannabotar.artquiz.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image"
        android:src="@drawable/background2"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="5"
            android:gravity="bottom"
            android:text="@string/title_art"
            android:textColor="@color/colorAccent"
            android:textSize="110sp"
            android:fontFamily="@font/amazr"
            android:shadowColor="@color/white"
            android:shadowRadius="1"
            android:shadowDx="-1"
            android:shadowDy="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:text="@string/title_quiz"
            android:textSize="100sp"
            android:layout_gravity="center_horizontal"
            android:gravity="top"
            android:fontFamily="sans-serif"
            android:textColor="@color/opaqueBlack"
            android:shadowColor="@color/white"
            android:shadowRadius="1"
            android:shadowDx="-1"
            android:shadowDy="1"
            android:rotation="-30"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            >
            <EditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:hint="@string/name_hint"
                android:textColorHint="@color/darkGrey"
                android:textColorHighlight="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:inputType="textCapWords"
                android:textSize="24sp"
                />
            <Button
                android:id="@+id/start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_button"
                android:layout_gravity="center_horizontal"
                android:onClick="clickStart"
                android:textColor="@color/white"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
